Alignment fix

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -111,7 +111,6 @@ input[type="text"] {
   font-family: 'Alegreya Sans', sans-serif;
   text-align: center;
   display: inline-block;
-  float: left;
 }
 
 /* styling for drop-down stats */
@@ -150,17 +149,9 @@ input[type="text"] {
 
 /* Mark an element as visible */
 .show {
-	display: inline-block;
+	display: block;
 }
 
 .data {
 	text-align: center;
-}
-
-.similarPlayerParent {
-	width: 100%;
-}
-
-#queried {
-	float: center;
 }
